      - Score::putNote() (edit.cpp): do not accept a new note on a tablature
        string already occupied (r. 3931)
      - Note::drag(): for tablatures, dragging up did not work: corrected.
      - Note::endDrag(): for tablatures, modified to keep same pitch on new
        string, if possible (also for 'upside down' tablatures) (r. 3935)
19.jan (lv)
      - MusicXML import fixes: slurs and wedges
18.jan (ws)
      - fix #8654 using a patch from Miwarre
      - fix #8763
      - for transposing instruments, different clefs for concert pitch can be set
        (#3128)
       (la)
      - fix #6547: File association on Mac. Add bww, cap, sgu, mgu, mid, ove, md, and MusicXML.
17.jan (ws)
      - fix #8625: second note in a tie is silent when first note is deleted
      - #8701: implement full screen mode (toggled by Ctrl+U)
       (la)
      - fix #8750: Crashes with system containing only vertical box
      - fix #6736: Preferences Menu disabled in non english. Avoid merging of menus.
16.jan (lv)
      - fix #8419: musicxml export: stem on whole note in triplet
      - fix #8426: courtesy accidentals do not import/export in MusicXML anymore (0.9.6 regression)
      - fix #8581: musicxml import: dynamics in notations element are ignored
      - sync mscore/test/iotest updates from 0.9.6 branch
       (ws)
      - implement tile cache for omr scan image; this allows to show multipage scans
        along the score
       (la)
      - fix #8719: Pickup measure messes up Lilypond export
15.jan (ws)
      - added photomode icon
      - new style parameter: ledger line length
      - fix spacing for displaced note heads in multi voice context
      - fix beam layout for staff crossing beams: under some conditions
        note stems were too short
13.jan (ws)
      - implement screenshot/print mode for foto mode
      - add background and resolution to foto mode context menu
      - foto mode: use resolution/background in preferences for output